src/objects/Needle_Syringe_Stock__c.object
<CustomObject>
    <fields>
        <fullName>Baby_Brown__c</fullName>
        <label>Baby Brown</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bags__c</fullName>
        <label>Bags</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bang_it_and_bin_it_stickers__c</fullName>
        <label>Bang it and bin it stickers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bins__c</fullName>
        <label>Bins</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blue__c</fullName>
        <label>Blue</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blunt_Needle__c</fullName>
        <label>Blunt Needle</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brown__c</fullName>
        <label>Brown</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Citric__c</fullName>
        <label>Citric</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cleaning_Works__c</fullName>
        <label>Cleaning Works</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condoms__c</fullName>
        <label>Condoms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foil_x_20__c</fullName>
        <label>Foil x 20</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foil_x_50__c</fullName>
        <label>Foil x 50</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green__c</fullName>
        <label>Green</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grey__c</fullName>
        <label>Grey</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Groin_FI__c</fullName>
        <label>Groin (FI)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HEP_C__c</fullName>
        <label>HEP C</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_Orange__c</fullName>
        <label>Long Orange</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orange__c</fullName>
        <label>Orange</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdose_Card__c</fullName>
        <label>Overdose (Card)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipes__c</fullName>
        <label>Pipes</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Safer_Injecting_Handbook__c</fullName>
        <label>Safer Injecting Handbook</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Safer_Injecting_MQI__c</fullName>
        <label>Safer Injecting (MQI)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staying_Alive__c</fullName>
        <label>Staying Alive</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stericups__c</fullName>
        <label>Stericups</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Swabs__c</fullName>
        <label>Swabs</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tooters__c</fullName>
        <label>Tooters</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tourniquet__c</fullName>
        <label>Tourniquet (Rolls)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vein_Care_booklet__c</fullName>
        <label>Vein Care (Booklet)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vein_Care_card__c</fullName>
        <label>Vein Care (card)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VitC__c</fullName>
        <label>VitC</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Water__c</fullName>
        <label>Water</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>When_Things_Go_Wrong__c</fullName>
        <label>When Things Go Wrong</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Diabetic__c</fullName>
        <label>1ml Diabetic</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Filter__c</fullName>
        <label>1ml Filter</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Low_Dead_Space__c</fullName>
        <label>1ml Low Dead Space</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Nevershare__c</fullName>
        <label>1ml Nevershare</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Omnifix__c</fullName>
        <label>1ml Omnifix</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1ml_Saline__c</fullName>
        <label>1ml Saline</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2ml_Green__c</fullName>
        <label>2ml Green</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2ml_Never_Share_Syringe__c</fullName>
        <label>2ml Never Share Syringe</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2ml_Orange__c</fullName>
        <label>2ml Orange</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2ml_Syringe__c</fullName>
        <label>2ml Syringe</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5ml_Syringe__c</fullName>
        <label>5ml Syringe</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NSP Stock</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>X1ml_Diabetic__c</columns>
        <columns>X1ml_Filter__c</columns>
        <columns>X1ml_Nevershare__c</columns>
        <columns>X1ml_Omnifix__c</columns>
        <columns>X2ml_Green__c</columns>
        <columns>X2ml_Never_Share_Syringe__c</columns>
        <columns>X2ml_Orange__c</columns>
        <columns>X2ml_Syringe__c</columns>
        <columns>X5ml_Syringe__c</columns>
        <columns>Baby_Brown__c</columns>
        <columns>Blue__c</columns>
        <columns>Brown__c</columns>
        <columns>Orange__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stock Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NSP Stock</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>